--- a/css/juhyun.css
+++ b/css/juhyun.css
@@ -5,6 +5,10 @@ body, #headerwarp {
 
 #headerwarp {
   background-color: white;
+  transition: 0.5s;
+}
+#headerwarp.active-hover {
+  background-color: var(--light-blue, #dbebf6) !important;
 }
 #headerwarp .header_box {
   background-color: transparent !important;
@@ -22,10 +26,6 @@ body, #headerwarp {
 }
 #blockWrap #green19_81348 {
   margin-top: -20px !important;
-}
-
-.active-hover {
-  background-color: var(--light-blue, #dbebf6) !important;
 }
 
 #gNavi.gNavi {
@@ -46,25 +46,15 @@ body, #headerwarp {
   left: 0;
   width: 100%;
   height: 0;
-  background-color: var(--light-blue, #dbebf6) !important;
+  background-color: red;
   transition: 0.5s;
 }
-#gNavi.gNavi > ul:hover {
-  margin: 0 -50px;
-  background-color: var(--light-blue, #dbebf6) !important;
-}
-#gNavi.gNavi > ul:hover li {
-  padding: 0 5rem !important;
-  transition: all 0.5s;
-  margin-bottom: 10px;
+#gNavi.gNavi > ul:hover > li {
+  padding: 0 3rem !important;
 }
 #gNavi.gNavi > ul:hover::before,
 #gNavi.gNavi > ul:hover ul {
   height: 250px;
-  margin: 0 0px;
-  transition: all 0.5s;
-  white-space: nowrap;
-  padding-top: 10px;
 }
 #gNavi.gNavi > ul ul {
   display: block !important;
@@ -78,7 +68,6 @@ body, #headerwarp {
   position: absolute;
   left: 0px;
   top: 90px;
-  white-space: nowrap;
 }
 #gNavi.gNavi > ul ul li {
   display: block !important;
@@ -87,6 +76,7 @@ body, #headerwarp {
   font-family: "Paperlogy";
   font-weight: 300 !important;
   padding: 8px 0px !important;
+  white-space: nowrap;
 }
 #gNavi.gNavi > ul > li {
   padding: 0px !important;
