--- a/css/juhyun.scss
+++ b/css/juhyun.scss
@@ -64,7 +64,9 @@ body, #headerwarp{
             &:hover{              
                
                 >li{
-                    padding: 0 3rem !important;                  
+                    >a {
+                        padding: 0 3rem !important;    
+                    }            
                   
                
                 }
@@ -75,8 +77,7 @@ body, #headerwarp{
             }
             ul{
                 display: block !important;
-                min-width: 115px;
-                transform: translateX(0) !important;
+                min-width: 115px;               
                 height:0;
                 overflow: hidden;
                 transition: 0.5s;             
@@ -85,6 +86,7 @@ body, #headerwarp{
                 position: absolute;
                 left: 0px;
                 top: 90px;
+                line-height: 2;
                
 
                 li{
@@ -106,6 +108,8 @@ body, #headerwarp{
               font-family: "Paperlogy" !important;
               font-weight: 600 !important;
               padding: 0px 30px !important;
+              transition: 0.5s;
+
               
               &.active{
                 &:after {
