--- a/css/juhyun.scss
+++ b/css/juhyun.scss
@@ -57,8 +57,7 @@ body, #headerwarp{
                 left: 0;    
                 width: 100%;
                 height: 0;
-                // background-color: var(--light-blue, #dbebf6)!important;
-                background-color: red;
+                background-color: var(--light-blue, #dbebf6)!important;               
                 transition: 0.5s;
             }
             &:hover{              
@@ -87,6 +86,11 @@ body, #headerwarp{
                 left: 0px;
                 top: 90px;
                 line-height: 2;
+                &:before{
+                    content: "";
+                    display: block;
+                    height: 15px;
+                }
                
 
                 li{
@@ -109,6 +113,7 @@ body, #headerwarp{
               font-weight: 600 !important;
               padding: 0px 30px !important;
               transition: 0.5s;
+              width: auto !important;
 
               
               &.active{
@@ -116,12 +121,13 @@ body, #headerwarp{
                     content: '';
                     position: absolute;
                     bottom: 1px;
-                    left: 50%;
-                    transform: translate3d(-50%, 0, 0);
-                    width: 0;
+                    left: 0;
+                    right:0;
+                    margin:0 auto;                                 
+                    // width: 0;
                     height: 4px;
                     background: var(--light-blue, #dbebf6)!important;
-                    width: 106px;
+                    width: calc(100% - 16px);
                     
                    }
               }
