소메뉴위치수정

--- a/css/juhyun.css
+++ b/css/juhyun.css
@@ -68,6 +68,7 @@ body, #headerwarp {
   left: 0px;
   top: 90px;
   line-height: 2;
+  transform: translateX(0);
 }
 #gNavi.gNavi > ul ul:before {
   content: "";
