--- a/css/juhyun.scss
+++ b/css/juhyun.scss
@@ -86,6 +86,8 @@ body, #headerwarp{
                 left: 0px;
                 top: 90px;
                 line-height: 2;
+                transform: translateX(0);
+                
                 &:before{
                     content: "";
                     display: block;
