--- a/css/juhyun.scss
+++ b/css/juhyun.scss
@@ -87,7 +87,7 @@ body, #headerwarp{
                 top: 90px;
                 line-height: 2;
                 transform: translateX(0);
-                
+
                 &:before{
                     content: "";
                     display: block;
@@ -1047,26 +1047,22 @@ button.slick-prev, button.slick-next {
   }
 
   #gNavi.gNavi > ul > 
-  li#gNaviNum0::after,
-  li#gNaviNum1::after,
-  li#gNaviNum2::after,
-  li#gNaviNum3::after {
+  li {
+
+    &::after {
     content: '';
     position: absolute;
-    left: 50%;
+    left: 0;
     bottom: 0;
     width: 0;
-    height: 2px;
+    height: 1px;
     background-color: white;
     transition: all 0.4s ease;
-    transform: translateX(-50%);
-    transform-origin: center;
+    margin:auto; 
+    }
+    &:hover::after {
+      width: calc(100% - 30px);
+    }
+
   }
 
-  #gNavi.gNavi > ul >
-   li#gNaviNum0:hover::after, 
-   li#gNaviNum1:hover::after,
-   li#gNaviNum2:hover::after,
-   li#gNaviNum3:hover::after {
-    width: 100%;
-  }
