유튜브 이미지 섹션 조정

--- a/css/juhyun.css
+++ b/css/juhyun.css
@@ -31,6 +31,10 @@ body, #headerwarp {
   margin-top: -20px !important;
 }
 
+#green19_82681 {
+  margin: -260px auto 0 -105px !important;
+}
+
 #gNavi.gNavi {
   margin: 0px 0px !important;
 }
@@ -639,7 +643,6 @@ button.slick-prev, button.slick-next {
 
 #green19_82116 {
   height: 385px;
-  background: var(--Color-2, #DBEBF6);
   margin-bottom: -20px !important;
 }
 #green19_82116 .boardHead {
@@ -811,6 +814,7 @@ button.slick-prev, button.slick-next {
   align-items: center;
   justify-content: center;
   height: 770px;
+  background-color: #DBEBF6;
 }
 
 .youtobe_section_img {
@@ -829,8 +833,14 @@ button.slick-prev, button.slick-next {
   align-items: center !important;
   justify-content: center !important;
 }
-.youtobe_section_img .slick-slide .slick-cloned {
+.youtobe_section_img .slick-slide {
   width: 300px !important;
+}
+.youtobe_section_img .slick-slide > div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0 10px;
 }
 .youtobe_section_img .img1,
 .youtobe_section_img .img2,
