--- a/css/juhyun.scss
+++ b/css/juhyun.scss
@@ -876,12 +876,15 @@ button.slick-prev, button.slick-next {
     .slick-slide {
         width: 300px !important;
     }
+    .slick-list{
+        width: 1365px;
+    }
 
     .slick-slide > div {
         display: flex;
         align-items: center;
         justify-content: center;
-        margin: 0 10px; // 이미지들 사이의 간격을 줄이기 위해 margin 값을 조정
+        margin: 0 auto !important; // 이미지들 사이의 간격을 줄이기 위해 margin 값을 조정
     }
     .img1,
     .img2,
