--- a/css/juhyun.scss
+++ b/css/juhyun.scss
@@ -663,7 +663,7 @@ button.slick-prev, button.slick-next {
     .boardHead{
         border-bottom: 1px solid var(--Main, #F17522) !important;
         padding-top: 20px !important;
-        margin-bottom: 10px !important;
+        margin-bottom: 15px !important;
     }
     .boardHead-Title{
         font-family: "Paperlogy 5 Medium" !important;
@@ -873,11 +873,9 @@ button.slick-prev, button.slick-next {
     justify-content: center !important;
     }
     
-    .slick-slide {
-        width: 300px !important;
-    }
+   
     .slick-list{
-        width: 1365px;
+        width: 1365px !important;
     }
 
     .slick-slide > div {
@@ -925,21 +923,21 @@ button.slick-prev, button.slick-next {
         height: 50px;
     }
     .slick-arrow.slick-prev::after{
-       
+        right: -90px !important;
         width: 2px !important ;
         background-color: #f17522 !important;
     }
     .slick-arrow.slick-next::after{
-        left: -13% !important;
+        left: -190% !important;
         background-color: #f17522 !important;
     }
     .slick-arrow.slick-prev::before{
-       
+        right: -90px !important;
         width: 2px !important ;
         background-color: #f17522 !important;
     }
     .slick-arrow.slick-next::before{
-        left: -15% !important;
+        left: -190% !important;
         background-color: #f17522 !important;
     }
 
