--- a/css/juhyun.scss
+++ b/css/juhyun.scss
@@ -922,7 +922,7 @@ button.slick-prev, button.slick-next {
         width: 50px;
         height: 50px;
     }
-    .slick-arrow.slick-prev::after{
+    .slick-prev .slick-arrow::after{
         right: -90px !important;
         width: 2px !important ;
         background-color: #f17522 !important;
@@ -931,7 +931,7 @@ button.slick-prev, button.slick-next {
         left: -190% !important;
         background-color: #f17522 !important;
     }
-    .slick-arrow.slick-prev::before{
+    .slick-prev .slick-arrow::before{
         right: -90px !important;
         width: 2px !important ;
         background-color: #f17522 !important;
