--- a/css/juhyun.scss
+++ b/css/juhyun.scss
@@ -510,6 +510,7 @@ margin: -260px auto 0 -105px !important;
     border-radius: 10px;
 }
 .text-img {
+    display: none;
     position: absolute;
     right: 0;
     top: 50%;
@@ -561,7 +562,7 @@ margin: -260px auto 0 -105px !important;
 // 의사들 슬랙슬라이드 //
 .slick-current .doctor-item .doctor-cir {
     margin-top: -53px;
-    width: 670px; /* 수정 */
+    width: 570px; /* 수정 */
     height: 550px; /* 수정*/
     z-index: 2; 
     margin-left: -70px;
@@ -574,7 +575,7 @@ margin: -260px auto 0 -105px !important;
 }
 
 .slick-current .doctor-item .doctor-cir .img {
-    width: 600px; /* 수정*/
+    width: 500px; /* 수정*/
     height: 550px; /* 수정*/
     z-index: 1;/* 수정*/
 }
