[의사들]이미지 조정3

--- a/css/juhyun.scss
+++ b/css/juhyun.scss
@@ -477,7 +477,7 @@ margin: -260px auto 0 -105px !important;
 #green19_78758 .doctor-item {
     float: left;
     width: calc(20% - 20px);
-    margin: 0 -55px;
+    margin: 30px -55px;
 }
 
 .doctor-cir {
