--- a/css/juhyun.css
+++ b/css/juhyun.css
@@ -423,7 +423,7 @@ body, #headerwarp {
 #green19_78758 .doctor-item {
   float: left;
   width: calc(20% - 20px);
-  margin: 0 -55px;
+  margin: 30px -55px;
 }
 
 .doctor-cir {
