--- a/css/juhyun.css
+++ b/css/juhyun.css
@@ -696,6 +696,8 @@ button.slick-prev, button.slick-next {
 
 #green19_82324 .banArea {
   display: flex;
+  align-items: center !important;
+  justify-content: center !important;
 }
 #green19_82324 .firstbanner-rightsection {
   display: flex;
@@ -818,6 +820,15 @@ button.slick-prev, button.slick-next {
 }
 #green19_82324 .firstbanner-rightsection .slick-next {
   right: -5px; /* 화살표 위치 조정 */
+}
+#green19_82324 .firstbanner-rightsection:before {
+  content: "";
+  position: absolute;
+  left: 50%;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  background-color: black;
 }
 
 #youtobeInfoCon {
