--- a/css/juhyun.scss
+++ b/css/juhyun.scss
@@ -716,8 +716,8 @@ button.slick-prev, button.slick-next {
 #green19_82324 {
     .banArea {
         display: flex;
-        align-items: center;
-        justify-content: center;
+        align-items: center !important;
+        justify-content: center !important;
     }
     .firstbanner-rightsection {
         display: flex;
@@ -865,15 +865,6 @@ button.slick-prev, button.slick-next {
         background-color: black;
 }
 }
-    .firstbanner-rightsection:before{
-            content: "";
-            position: absolute;
-            left: 50%;
-            right:0;
-            top:0;
-            bottom:0;
-            background-color: black;
-    }
 
 //유튜브 섹션//
 
