--- a/css/juhyun.css
+++ b/css/juhyun.css
@@ -197,15 +197,14 @@ body, #headerwarp {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 138px;
+  gap: 151px;
   align-self: stretch;
-  margin-right: 30px;
+  margin-right: 6px;
 }
 #mainbottom ul.image-list_center li {
   display: flex;
   flex-direction: column;
   width: 101.224px;
-  padding: 24.433px 26.178px;
   justify-content: center;
   align-items: center;
   gap: 17.452px;
@@ -654,7 +653,13 @@ button.slick-prev, button.slick-next {
 
 #green19_82116 {
   height: 385px;
+  display: flex;
   margin-bottom: -20px !important;
+  justify-content: space-between;
+  width: 1364px !important;
+}
+#green19_82116 .box_ {
+  margin-right: 200px !important;
 }
 #green19_82116 .boardHead {
   border-bottom: 1px solid var(--Main, #F17522) !important;
@@ -828,7 +833,8 @@ button.slick-prev, button.slick-next {
   right: 0;
   top: 0;
   bottom: 0;
-  background-color: black;
+  background-color: #f9f1de;
+  z-index: -1;
 }
 
 #youtobeInfoCon {
@@ -1050,5 +1056,5 @@ li#gNaviNum3 {
 }
 
 #gNavi.gNavi > ul > li > a {
-  padding-right: 30px !important;
+  padding-right: 0px !important;
 }
