[유튜브]이미지 정리

--- a/css/juhyun.css
+++ b/css/juhyun.css
@@ -873,6 +873,9 @@ button.slick-prev, button.slick-next {
 .youtobe_section_img .slick-list {
   width: 1365px !important;
 }
+.youtobe_section_img .slick-slide .slick-current .slick-active {
+  width: 300px !important;
+}
 .youtobe_section_img .slick-slide > div {
   display: flex;
   align-items: center;
