--- a/css/juhyun.scss
+++ b/css/juhyun.scss
@@ -445,233 +445,101 @@ margin: -260px auto 0 -105px !important;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
 }
-
-.doctor-wrapper {
-    position: relative;
-    margin-top: 135px;
-}
-
-.doctor-wrapper:before {
-    position: absolute;
-    top: 67px;
-    left: 0;
-    content: '';
-    width: 100%;
-    height: 1px;
-    background-color: rgba(0, 0, 0, 0.1);
-}
-
-.doctor-list-pc {
-    display: block;
-}
-
-.doctor-list-m {
-    display: none;
-}
-
-.doctor-list {
-    margin: 0 -10px;
-}
-
-.doctor-list .slick-list {
-    overflow: visible;
-}
-
-#green19_78758 .doctor-item {
-    float: left;
-    width: calc(20% - 20px);
-    margin: 30px -55px;
-}
-
-.doctor-cir {
-    position: relative;
-    margin: 0 auto;
-    width: 400px;
-    height: 450px;
-    transition: all 0.4s ease-in-out;
-    margin: 0 15px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.doctor-cir .inner {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background-color: #fff;
-    z-index: 1;
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-}
-
-.doctor-cir .img {
-    width: 300px;
-    height: 100%;
-    background-size: cover;
-    background-position: center;
-    border-radius: 10px;
-}
-.text-img {
-    display: none;
-    position: absolute;
-    right: 0;
-    top: 50%;
-    transform: translateY(-50%);
-    color: white;
-}
-
-.item01 .doctor-cir{
- .img {
-    background: url("https://juhyun88.github.io/iweb_src/doctor/doctor1.jpg") center/cover no-repeat;
-}
-}
-.item02 .doctor-cir .img {
-    background: url("https://juhyun88.github.io/iweb_src/doctor/doctor2.jpg") center/cover no-repeat;
-}
-
-.item03 .doctor-cir .img {
-    background: url("https://juhyun88.github.io/iweb_src/doctor/doctor3.jpg") center/cover no-repeat;
-}
-
-.item04 .doctor-cir .img {
-    background: url("https://juhyun88.github.io/iweb_src/doctor/doctor4.png") center/cover no-repeat;
-}
-
-.item05 .doctor-cir .img {
-    background: url("https://juhyun88.github.io/iweb_src/doctor/doctor5.jpg") center/cover no-repeat;
-}
-
-.item06 .doctor-cir .img {
-    background: url("https://juhyun88.github.io/iweb_src/doctor/doctor6.jpg") center/cover no-repeat;
-}
-
-.item07 .doctor-cir .img {
-    background: url("https://juhyun88.github.io/iweb_src/doctor/doctor7.jpg") center/cover no-repeat;
-}
-
-.doctor-cir,
-.doctor-cir .inner,
-.doctor-cir .img,
-.doctor-txt,
-.doctor-txt .tit,
-.doctor-txt .num,
-.doctor-txt .year {
-    -webkit-transition: all 0.4s;
-    transition: all 0.4s;
-}
-
-// 의사들 슬랙슬라이드 //
-.slick-current .doctor-item .doctor-cir {
-    margin-top: -53px;
-    width: 590px; /* 수정 */
-    height: 553px; /* 수정*/
-    z-index: 2; 
-    margin-left: -70px;
-}
-
-.slick-current .doctor-item .doctor-cir .inner {
-    border-width: 0;
-    box-shadow: none;
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='var(--primery)', endColorstr='#f28b1e', GradientType=1);
-}
-
-.slick-current .doctor-item .doctor-cir .img {
-    width: 350px; /* 수정*/
-    height: 500px; /* 수정*/
-    z-index: 1;/* 수정*/
-    margin-top: 53px;
-}
-button.slick-prev, button.slick-next {
-    z-index: 3; /* 슬라이드 네비게이션 버튼이 이미지보다 앞에 보이도록 설정 */
-    color: #F17522 !important; /* 화살표 색상 설정, !important 추가 */
-}
-
-.doctor-item .doctor-cir {
-    width: 444px; /* 기본 이미지 크기 */
-    height: 450px; /* 기본 이미지 크기 */
-    transition: all 0.4s ease-in-out; /* 부드러운 전환 효과 */
-    margin: 10px 15px; 
-}
-.doctor-item .doctor-cir .img {
-    width: 300px; /* 이미지를 부모 크기에 맞게 설정 */
-    height: 100%; /* 이미지를 부모 크기에 맞게 설정 */
-}
-@for $i from 1 through 7 {
-    .slick-current .doctor-item.item#{$i} .doctor-cir .img {
-        background-image: url("https://juhyun88.github.io/iweb_src/doctor/doctor#{$i}.jpg");
-        background-size: cover;
-        background-position: center;
-        background-repeat: no-repeat;
-    }
-}
-
-.slick-current .doctor-item .doctor-cir > span:nth-child(2) {
-    -webkit-animation-delay: 0.3s;
-    animation-delay: 0.3s;
-}
-
-.slick-current .doctor-item .doctor-cir > span:nth-child(3) {
-    -webkit-animation-delay: 0.8s;
-    animation-delay: 0.8s;
-}
-
-@keyframes nation-circle {
-	0% {
-		-webkit-transform: scale(0.6);
-		transform: scale(0.6);
-		opacity: 0.8; 
-	}
-	100% {
-		-webkit-transform: scale(1.4);
-		transform: scale(1.4);
-		opacity: 0; 
-	}
-}
-.slick-list {
+body {
+    font-family: Arial, sans-serif;
+    background-color: #f0f0f0;
     margin: 0;
     padding: 0;
-    width: 100% !important;
-    overflow: hidden !important;
 }
-
-
-
-.slick-slide .slick-active {
-    width: auto !important;
+.centerSwiper {
+    width: 100%;
+    height: 390px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #ffffff;
+    overflow: hidden;
 }
-.slick-slide img{
+.swiper-container {
+    width: 100%;
+    height: 100%;
+}
+.swiper-slide {
+   
+    border: 2px solid white;
     width: 250px;
+    color: rgb(0, 0, 0);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  
+}
+.swiper-pagination {
+    position: absolute;
+    bottom: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 10;
+}
+.content {
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+    flex-wrap: nowrap; 
+    transition: 0.5s; 
+    transform: scale(0.8);      
+  
+}
+.content > div{
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+    flex-wrap: nowrap;        
+}
+.content .img{
+    width:250px;
+    flex-shrink: 0;
+    background-color: yellow;
+    margin-left: 50px;
+
+}
+.content .des{          
+    flex-shrink: 0;
+    max-width:0;
+    overflow: hidden; 
+    transition: 0.5s ; 
+
+       
+}
+.swiper-slide-active{
+    z-index: 1000;
+    transform: scale(1);
+    background-color: rgb(255, 255, 255);
+}
+.swiper-slide-active .des{
+    max-width: 150px;            
+}
+.swiper-slide-active .des  {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    text-align: center;
+    align-items: start;
 }
 
-.slick-current .doctor-item .text-img {
-    display: block;
-}
-.slick-arrow::before{
-    background-color: #F17522 !important
-}
-.slick-arrow::after{
-    background-color: #F17522 !important
-}
-.slick-arrow.slick-next::after{
-    left: -60% !important;
-}
-.slick-arrow.slick-next::before{
-    left: -165% !important;
-}
-.slick-arrow.slick-prev::after{
-    left: -60% !important;
-}
-.slick-arrow.slick-prev::before{
-    left: -165% !important;
-}
-.slick-prev,
-.slick-next {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    width: 50px;
-    height: 50px;
+.swiper-slide-activ .des span, .des button {
+    display: flex;
+    flex-direction: column;
+    white-space: pre-line;
+    line-height: 1.9;
+    width: 130px;
+    height: 30px;
+    border: 1px #558ccf solid;
+    color: #558ccf;
+    font-family: "Paperlogy 4" !important;
+    font-weight: 400;
+    background-color: white;
 }
 
 //게시판 부분//
