--- a/css/juhyun.css
+++ b/css/juhyun.css
@@ -384,7 +384,7 @@ body, #headerwarp {
 
 #green19_78758 {
   padding-top: 25px;
-  height: 1000px;
+  height: 750px;
   background-color: #DBEBF6;
   background-size: cover;
   box-sizing: border-box;
@@ -455,7 +455,8 @@ body, #headerwarp {
   background-color: rgb(255, 255, 255);
 }
 #green19_78758 .swiper-slide-active .des {
-  max-width: 150px;
+  font-family: "Noto Sans KR", sans-serif !important;
+  max-width: 190px;
   display: flex;
   flex-direction: column !important;
   gap: 10px;
@@ -466,7 +467,7 @@ body, #headerwarp {
   display: flex;
   flex-direction: column;
   white-space: pre-line;
-  line-height: 1.9;
+  line-height: 1.3;
   width: 130px;
   height: 30px;
   border: 1px #558ccf solid;
@@ -748,6 +749,9 @@ body, #headerwarp {
 }
 .youtobe_section_img .slick-arrow.slick-next::before {
   left: -150% !important;
+  background-color: #f17522 !important;
+}
+.youtobe_section_img .slick-arrow:before {
   background-color: #f17522 !important;
 }
 .youtobe_section_img .slick-next {
