--- a/css/juhyun.scss
+++ b/css/juhyun.scss
@@ -439,7 +439,7 @@ margin: -260px auto 0 -105px !important;
 // 의사들 //
 #green19_78758 {
     padding-top: 25px;
-    height: 1000px;
+    height: 750px;
     background-color: #DBEBF6;
     background-size: cover;
     -webkit-box-sizing: border-box;
@@ -518,7 +518,8 @@ margin: -260px auto 0 -105px !important;
         background-color: rgb(255, 255, 255);
     }
     .swiper-slide-active .des  {
-        max-width: 150px; 
+        font-family:  "Noto Sans KR", sans-serif !important;    
+        max-width: 190px; 
         display: flex;
         flex-direction: column !important;
         gap: 10px;
@@ -530,7 +531,7 @@ margin: -260px auto 0 -105px !important;
         display: flex;
         flex-direction: column;
         white-space: pre-line;
-        line-height: 1.9;
+        line-height: 1.3;
         width: 130px;
         height: 30px;
         border: 1px #558ccf solid;
@@ -847,7 +848,9 @@ margin: -260px auto 0 -105px !important;
         left: -150% !important;
         background-color: #f17522 !important;
     }
-
+    .slick-arrow:before{
+        background-color: #f17522 !important;
+    }
 
 
     .slick-next {
