--- a/css/juhyun.scss
+++ b/css/juhyun.scss
@@ -497,12 +497,12 @@ margin: -260px auto 0 -105px !important;
         align-items: center; 
         flex-wrap: nowrap;        
     }
-    .content .img{
-        width:250px;
+    .content .img {
+        width: 200px;
+        height: 250px;
         flex-shrink: 0;
         background-color: yellow;
-      
-
+        transition: all 0.3s ease;
     }
     .content .des{          
         flex-shrink: 0;
@@ -519,12 +519,18 @@ margin: -260px auto 0 -105px !important;
     }
     .swiper-slide-active .des  {
         font-family:  "Noto Sans KR", sans-serif !important;    
-        max-width: 190px; 
+        max-width: 200px; 
         display: flex;
         flex-direction: column !important;
         gap: 10px;
         text-align: center;
         align-items: start;
+    }
+    .swiper-slide-active .img {
+        width: 300px;   /* 기존보다 넓게 */
+        height: 400px;  /* 높이도 추가 */
+        background-color: yellow;
+        transition: all 0.3s ease;
     }
 
     .swiper-slide-activ .des span, .des button {
@@ -849,6 +855,9 @@ margin: -260px auto 0 -105px !important;
         background-color: #f17522 !important;
     }
     .slick-arrow:before{
+        background-color: #f17522 !important;
+    }
+    .slick-arrow::after{
         background-color: #f17522 !important;
     }
 
