--- a/css/juhyun.css
+++ b/css/juhyun.css
@@ -396,82 +396,39 @@ body, #headerwarp {
   padding: 0;
 }
 #green19_78758 .centerSwiper {
-  width: 100%;
-  height: 390px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: #ffffff;
-  overflow: hidden;
 }
-#green19_78758 .swiper-container {
-  width: 100%;
-  height: 100%;
-}
-#green19_78758 .swiper-slide {
-  border: 2px solid white;
+#green19_78758 .centerSwiper .swiper-container .swiper-slide {
   width: 250px;
   color: rgb(0, 0, 0);
   display: flex;
   justify-content: center;
-  align-items: center;
-}
-#green19_78758 .swiper-pagination {
-  position: absolute;
-  bottom: 10px;
-  left: 50%;
-  transform: translateX(-50%);
-  z-index: 10;
-}
-#green19_78758 .content {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  align-items: stretch;
   flex-wrap: nowrap;
+}
+#green19_78758 .centerSwiper .swiper-container .swiper-slide.content {
   transition: 0.5s;
   transform: scale(0.8);
 }
-#green19_78758 .content > div {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: nowrap;
+#green19_78758 .centerSwiper .swiper-container .swiper-slide.content .img img {
+  width: 250px;
 }
-#green19_78758 .content .img {
-  width: 200px;
-  height: 250px;
-  flex-shrink: 0;
-  background-color: yellow;
-  transition: all 0.3s ease;
-}
-#green19_78758 .content .des {
+#green19_78758 .centerSwiper .swiper-container .swiper-slide.content .des {
   flex-shrink: 0;
   max-width: 0;
   overflow: hidden;
-  transition: 0.5s;
-}
-#green19_78758 .swiper-slide-active {
-  z-index: 1000;
-  transform: scale(1);
-  background-color: rgb(255, 255, 255);
-}
-#green19_78758 .swiper-slide-active .des {
   font-family: "Noto Sans KR", sans-serif !important;
-  max-width: 200px;
   display: flex;
   flex-direction: column !important;
   gap: 10px;
-  text-align: center;
   align-items: start;
+  white-space: nowrap;
+  padding: 1rem;
 }
-#green19_78758 .swiper-slide-active .img {
-  width: 300px; /* 기존보다 넓게 */
-  height: 400px; /* 높이도 추가 */
-  background-color: yellow;
-  transition: all 0.3s ease;
-}
-#green19_78758 .swiper-slide-activ .des span, #green19_78758 .des button {
+#green19_78758 .centerSwiper .swiper-container .swiper-slide.content .des button {
   display: flex;
   flex-direction: column;
   white-space: pre-line;
@@ -483,6 +440,13 @@ body, #headerwarp {
   font-family: "Paperlogy 4" !important;
   font-weight: 400;
   background-color: white;
+}
+#green19_78758 .centerSwiper .swiper-container .swiper-slide.content.swiper-slide-active {
+  z-index: 1000;
+  transform: scale(1);
+}
+#green19_78758 .centerSwiper .swiper-container .swiper-slide.content.swiper-slide-active .des {
+  max-width: 200px;
 }
 
 #green19_82116 {
