--- a/css/juhyun.scss
+++ b/css/juhyun.scss
@@ -451,101 +451,79 @@ margin: -260px auto 0 -105px !important;
         margin: 0;
         padding: 0;
     }
-    .centerSwiper {
-        width: 100%;
-        height: 390px;
+    .centerSwiper {    
+      
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        background-color: #ffffff;
-        overflow: hidden;
-    }
-    .swiper-container {
-        width: 100%;
-        height: 100%;
-    }
-    .swiper-slide {
-    
-        border: 2px solid white;
-        width: 250px;
-        color: rgb(0, 0, 0);
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    
-    }
-    .swiper-pagination {
-        position: absolute;
-        bottom: 10px;
-        left: 50%;
-        transform: translateX(-50%);
-        z-index: 10;
-    }
-    .content {
-        display: flex;
-        justify-content: center;
-        align-items: center; 
-        flex-wrap: nowrap; 
-        transition: 0.5s; 
-        transform: scale(0.8);      
-    
-    }
-    .content > div{
-        display: flex;
-        justify-content: center;
-        align-items: center; 
-        flex-wrap: nowrap;        
-    }
-    .content .img {
-        width: 200px;
-        height: 250px;
-        flex-shrink: 0;
-        background-color: yellow;
-        transition: all 0.3s ease;
-    }
-    .content .des{          
-        flex-shrink: 0;
-        max-width:0;
-        overflow: hidden; 
-        transition: 0.5s ; 
 
-        
-    }
-    .swiper-slide-active{
-        z-index: 1000;
-        transform: scale(1);
-        background-color: rgb(255, 255, 255);
-    }
-    .swiper-slide-active .des  {
-        font-family:  "Noto Sans KR", sans-serif !important;    
-        max-width: 200px; 
-        display: flex;
-        flex-direction: column !important;
-        gap: 10px;
-        text-align: center;
-        align-items: start;
-    }
-    .swiper-slide-active .img {
-        width: 300px;   /* 기존보다 넓게 */
-        height: 400px;  /* 높이도 추가 */
-        background-color: yellow;
-        transition: all 0.3s ease;
-    }
+        .swiper-container {
+           
 
-    .swiper-slide-activ .des span, .des button {
-        display: flex;
-        flex-direction: column;
-        white-space: pre-line;
-        line-height: 1.3;
-        width: 130px;
-        height: 30px;
-        border: 1px #558ccf solid;
-        color: #558ccf;
-        font-family: "Paperlogy 4" !important;
-        font-weight: 400;
-        background-color: white;
+            .swiper-slide {   
+               
+                width: 250px;
+                color: rgb(0, 0, 0);
+                display: flex;
+                justify-content: center;
+                align-items: stretch;
+                flex-wrap: nowrap; 
+
+                &.content {              
+                    
+                    transition: 0.5s; 
+                    transform: scale(0.8);  
+                       
+                        .img {        
+
+                            img{
+                                width: 250px;                 
+                            }
+                            }
+                        .des{          
+                            flex-shrink: 0;
+                            max-width:0;
+                            
+                            overflow: hidden; 
+                            font-family:  "Noto Sans KR", sans-serif !important; 
+                            display: flex;
+                            flex-direction: column !important;
+                            gap: 10px;                
+                            align-items: start;
+                            white-space: nowrap;  
+                            padding:1rem;
+
+                            button {
+                                display: flex;
+                                flex-direction: column;
+                                white-space: pre-line;
+                                line-height: 1.3;
+                                width: 130px;
+                                height: 30px;
+                                border: 1px #558ccf solid;
+                                color: #558ccf;
+                                font-family: "Paperlogy 4" !important;
+                                font-weight: 400;
+                                background-color: white;
+                            }
+                                
+                        } 
+                        
+                        &.swiper-slide-active{
+                            z-index: 1000;
+                            transform: scale(1);         
+                            .des  {          
+                                max-width: 200px; 
+                               
+                            }
+                        }
+                }
+            
+            }
+        }
     }
+   
 }
 
 //게시판 부분//
